저장 업데이트

--- a/ERB/01 SYSTEM/FIRST/NEWGAME.ERB
+++ b/ERB/01 SYSTEM/FIRST/NEWGAME.ERB
@@ -53,7 +53,7 @@ INPUT
 IF RESULT == 0
 	BEGIN FIRST
 ELSEIF RESULT == 1
-	CALL LOAD_GAME
+	LOADGAME
 	RESTART
 ELSEIF RESULT == 2
 	CALL CUSTOM_CHARA()
