초기 시작 설정 제작
3개의 초기배경 제작
초기배경에 따라 능력치 변화

--- a/ERB/01 SYSTEM/FIRST/EVENTFIRST.ERB
+++ b/ERB/01 SYSTEM/FIRST/EVENTFIRST.ERB
@@ -1,8 +1,7 @@
 ﻿@EVENTFIRST
 
-	PRINTL 이세계에서 한 여자 모험가가 미궁도시에 막 도착한 이야기
-	PRINTL 보통의 era와 다르게 여아나타가 당하는 주제로 제작합니다
-	PRINTL 최신버전은 방주에서
+	PRINTL 여관을 운영하고 모험가와 NPC들과 교류하는 이야기
+	PRINTL 한창 제작중인 게임입니다.
 	WAIT
  
 	DAY = 1
