--- a/ERB/01 SYSTEM/FIRST/NEWGAME.ERB
+++ b/ERB/01 SYSTEM/FIRST/NEWGAME.ERB
@@ -22,7 +22,7 @@ PRINTFORML ⨳⨳⨳  EraHearth  ⨳⨳⨳
 RESETCOLOR
 PRINTL
 PRINTFORML "따스한 모닥불이 피어오르는 작은 여관,"
-PRINTFORML "당신의 작은 영지를 이끌어보세요."
+PRINTFORML "당신의 작은 여관을 운영해보세요."
 PRINTL
 
 ;CALL SYSTEM_TITLE_BANNER(0)
