--- a/ERB/01 SYSTEM/FIRST/CUSTOMIZE.ERB
+++ b/ERB/01 SYSTEM/FIRST/CUSTOMIZE.ERB
@@ -1,165 +1,185 @@
 ﻿@startCustomization
 
 	CLEARLINE 99999
-	PRINTFORMW {MASTER}
 	CALL customizeName
 	CALL customizeHistory
-	CALL customizeCharacteristics
-	CALL customizeClothes
+	;캐릭터설정은 패스
+	;CALL customizeCharacteristics
+	;캐릭터 복장도 패스
+	;CALL customizeClothes
 	
 	PRINTW 설정 완료
+	PRINTW 여기에 대단한 튜토리얼 스토리가 진행될 예정입니다!
 
+; ------------------
+; 이름 및 호칭 설정(완료)
+; ------------------
 @customizeName
 
-	PRINTL
-	PRINTL 플레이어의 이름을 설정합니다
-	PRINTL
-	PRINTL 이름을 입력(기본: 당신)
-	INPUTS
-	
-	IF strlens(RESULTS)
-		NAME:MASTER = %RESULTS%
-	ELSE
-		NAME:MASTER = 당신
-	ENDIF
+$inputNAME
 
-	PRINTL 부를 이름 입력(기본: 당신)
-	INPUTS
+PRINTL
+PRINTL 플레이어의 이름을 입력해주세요.(기본 : 당신) 
+;	PRINTL ※ 글자 수 2~12자 제한
+PRINTL
+INPUTS
+
+IF strlens(RESULTS)
+	NAME:MASTER = %RESULTS%
+ELSE
+	NAME:MASTER = 당신
+ENDIF
+
+PRINTL
+PRINTL
+PRINTFORML 플레이어의 이름은 %NAME:MASTER%%krPost(NAME:MASTER, "이", "가")% 맞습니까?
+PRINTL
+PRINTL
+
+PRINTBUTTON "0[   네   ]  ", 0
+PRINTBUTTON "1[ 아니오 ]", 1
+PRINTL 
+
+$INPUT_LOOP1
+INPUT
+IF RESULT == 0
+	PRINTFORMW 이름을 %NAME:MASTER%%krPost(NAME:MASTER, "으로", "로")% 설정합니다.
+ELSEIF RESULT == 1
+	GOTO inputNAME
+ELSE
+	CLEARLINE 1
+	GOTO INPUT_LOOP1
+ENDIF
+
+$inputCALLNAME
+
+PRINTL
+PRINTL 플레이어의 호칭을 입력해주세요.(기본: 당신)
+PRINTL
+INPUTS
+
+IF strlens(RESULTS)
+	CALLNAME:MASTER = %RESULTS%
+ELSE
+	CALLNAME:MASTER = 당신
+ENDIF
 	
-	IF strlens(RESULTS)
-		CALLNAME:MASTER = %RESULTS%
-	ELSE
-		CALLNAME:MASTER = 당신
-	ENDIF
-	
+PRINTL
+PRINTL
+PRINTFORML 플레이어의 호칭은 %CALLNAME:MASTER%%krPost(CALLNAME:MASTER, "이", "가")% 맞습니까?
+PRINTL
+PRINTL
+
+PRINTBUTTON "0[   네   ]  ", 0
+PRINTBUTTON "1[ 아니오 ]", 1
+PRINTL 
+
+$INPUT_LOOP2
+INPUT
+IF RESULT == 0
+	PRINTFORMW 호칭을 %CALLNAME:MASTER%%krPost(CALLNAME:MASTER, "으로", "로")% 설정합니다.
+ELSEIF RESULT == 1
+	GOTO inputCALLNAME
+ELSE
+	CLEARLINE 1
+	GOTO INPUT_LOOP2
+ENDIF
+
 	PRINTFORMW %NAME:MASTER%(%CALLNAME:MASTER%)%krPost(NAME:MASTER, "으로", "로")% 진행합니다.
 
+; ---------------------
+; 플레이어의 과거 설정(공사 중)
+; ---------------------
 @customizeHistory
-#dim dynamic partIdx
+#DIM LINEC
+#DIM FIRST_LINE
 
-	PRINTL
-	PRINTL 태생 선택
-	PRINTL [1] - 마탑의 천재 마법사
-	PRINTL       마력++ 마법공격++ 연금술+
-	PRINTL       체력-- 약물중독
-	PRINTL
-	PRINTL [2] - 길거리 출신 용병
-	PRINTL       체력+ 전투기술+ 소지금+
-	PRINTL       애널약점 성적명성+
-	PRINTL
-	PRINTL [3] - 견습 음마
-	PRINTL       성교기술++ 전신감도+ 흡정
-	PRINTL       정액중독 신앙심- 음문각인
-	PRINTL
-	PRINTL [4] - TS 전생한 남자
-	PRINTL       가슴크기+ 질감도+ 클리감도+
-	PRINTL       자위중독
-	PRINTL
-	PRINTL [5] - 성녀
-	PRINTL       가슴크기++ 명성+ 신앙심+ 피임결계
-	PRINTL       모유체질
 
 $inputHistory
+FIRST_LINE = LINECOUNT
 
-	input
-	if RESULT == 1
+PRINTL
+PRINTL ***** 당신은 어떤 사람이었나요? *****
+PRINTL
+PRINTL [1] - 이세계에서 온 고등학생
+PRINTL       불의의 사고로 이세계로 오게 된 평범한 고등학생
+PRINTL       고등교육으로 지능이, 낯선 세계에 적응하기 위해 관찰이 높다.
+PRINTL
+PRINTL [2] - 거두어진 고아(추천)
+PRINTL       전대 여관장에게 거둬 길러진 고아
+PRINTL       어릴 적 부터 여관일을 많이 하여 응대와 청결이 높다.
+PRINTL
+PRINTL [3] - 몰락한 귀족 가문의 후계자
+PRINTL       상속권을 잃은 채 도망쳐와 남은 돈으로 여관을 인수하였다.
+PRINTL       경영 능력치와 초기 자본이 높다.
+PRINTL
+
+
+
+INPUT
+;고등학생
+IF RESULT == 1
+	PRINTL [이세계에서 온 고등학생]으로 시작하겠습니까?
+	PRINTL 
+	PRINTL 특징 : 지능 + 10, 관찰 + 10, <스마트폰> 소지(아직 미구현)
+	PRINTL 
+	
+	CALL ASK_YN
+	IF RESULT == 0
+		PRINTW [이세계에서 온 고등학생]으로 시작합니다.
 		CFLAG:MASTER:태생 = 1
+		ABL:MASTER:지능 += 10
+		ABL:MASTER:관찰 += 10
+		;스마트폰은 나중에 추가
+	ELSE
+		CLEARLINE LINECOUNT - FIRST_LINE
+		GOTO inputHistory
+	ENDIF
 
-		PRINTW [마탑의 졸업생 마녀]로 게임을 시작합니다.
-		PRINTW
-		PRINTW 마법의 길에 뜻을 품은 이들이라면 국가와 종족을 불문하고 한 번쯤은 마탑에 발을 들이고 싶어할 것입니다.
-		PRINTW 하지만, 마탑에 들어가는 이 많아도 졸업한 이는 흔치 않으니, 자신의 명성에 누가 되는 것을 막고자 깐깐함이 하늘을 뚫는 탑의 원로들이 신입들을 험하게 다루기 때문입니다.
-		printFormW 여기 %kr(NAME:MASTER, "이", "가")% 있습니다. 어린 나이에 타고난 재능을 발견하여 파격적인 속도로 장로의 인정을 받아, 마침내 한 명의 마법사라고 자칭할 정도가 된 아이입니다.
-		PRINTW 물론 잠재력은 아주 뛰어납니다만, 아직 실전 경험이 없다는게 흠이라면 흠이겠지요. 장로들도 그것을 걱정했는지 이번에 이 미궁도시에 파견을 보내 세상이 어떻게 돌아가는지 지켜보라고 한 참이고요.
-		PRINTW 과연 이 말괄량이 아가씨가 어떤 일을 겪게 될지는 아무도 모를 일입니다.
-
-		BASE:MASTER:마력 += 600
-		BASE:MASTER:체력 -= 500
-
-		ABL:MASTER:마법공격 += 2
-		ABL:MASTER:연금술 = 1
-		
-		EXP:MASTER:약물경험 = 10
-		ABL:MASTER:약물중독 = 1
-	elseif RESULT == 2
+;고아
+ELSEIF RESULT == 2
+	PRINTL [거두어진 고아]로 시작하겠습니까?
+	PRINTL 
+	PRINTL 특징 : 응대 + 10, 청결 + 5, 조리 + 10, 마을사람의 호감도 증가
+	PRINTL 
+	
+	CALL ASK_YN
+	IF RESULT == 0
+		PRINTW [거두어진 고아]로 시작합니다.
 		CFLAG:MASTER:태생 = 2
-		PRINTW [길거리 출신 용병]으로 게임을 시작합니다.
-		PRINTW
-		PRINTW 모든 인생이 행복한 운명을 지니고 태어나지는 않습니다. 좋은 집안에서 축복받으며 태어나는 삶도 있지만, 때로는 길거리에서 아무도 원치 않게 시작되어 버린 인생도 있는 법입니다.
-		printFormW %kr(NAME:MASTER, "은", "는")% 부모의 모습도 모릅니다. 기억 나는 가장 어릴 적의 일은 소매치기를 들켜 죽도록 얻어맞다가 간신히 도망친 기억뿐이니까요.
-		printFormW 그런 생일은커녕 나이도 모르는 %kr(NAME:MASTER, "을", "를")% 받아주고 %kr(CALLNAME:MASTER, "이라는", "라는")% 이름을 지어준 용병단의 동료들만이 %NAME:MASTER%의 유일한 가족이었습니다.
-		printFormW 얼마 전, 수준에 비해 보수가 괜찮아 보이던 건을 처리하던 중, 그만 광폭화한 몬스터에게 %kr(NAME:MASTER, "을", "를")% 뺀 전원이 죽어버리기 전까지는 말입니다.
-		PRINTW 그 사건 뒤로, 복수심에 불타 마물들을 무차별적으로 도륙하고 다니는 여자 용병의 소문이 퍼지기까지는 오랜 시간이 필요하지 않았습니다.
-		
-		BASE:MASTER:체력 += 250
+		ABL:MASTER:조리 += 10
+		ABL:MASTER:청결 += 5
+		ABL:MASTER:응대 += 10
+		;마을사람 호감도 증가는 미구현
+	ELSE
+		CLEARLINE LINECOUNT - FIRST_LINE
+		GOTO inputHistory
+	ENDIF
 
-		ABL:MASTER:전투기술 += 1
-		TALENT:MASTER:애널약점 = 1
-		CFLAG:MASTER:성적명성 = 1000
-		MONEY += 2000
-	elseif RESULT == 3
+ELSEIF RESULT == 3
+	PRINTL [몰락한 귀족 가문의 후계자]로 시작하겠습니까?
+	PRINTL 
+	PRINTL 특징 : 경영 + 10, 인내 + 10, 시작 골드 + 500G
+	PRINTL 
+	
+	CALL ASK_YN
+	IF RESULT == 0
+		PRINTW [몰락한 귀족 가문의 후계자]로 시작합니다.
 		CFLAG:MASTER:태생 = 3
-		PRINTW [견습 음마]로 게임을 시작합니다.
-		PRINTW
-		PRINTW 사람들이 눈치를 채지 못할 뿐, 생각보다 악마들은 인간들의 곁에 가까이 있습니다. 그들의 욕망을 직접적으로 갈구하는 음마들은 특히 더.
-		PRINTW 더 나아가, 아무래도 인간이 없으면 안 되는 그들은 다른 마물들과도 미묘한 경쟁관계에 있는데, 일단은 마물에 더 가깝다고 불리는 음마들이 알음알음 인간과 손을 잡고 마물을 사냥하는 것도 그 일환입니다.
-		PRINTW 다만 음마들은 보통의 싸움에는 능하지 않은 경우가 대부분이고, 전투력이 하락하는 불상사를 방지하기 위해 인간과의 연합에는 보통 그들이 가진 "본래의 힘"보다는 전투에 능한 사람을 보내곤 합니다.
-		printFormW 이런 사실은 이번에 결성된 공동 전선에 음마 쪽의 대표 중 한 명으로 뽑힌 %kr(NAME:MASTER, "이", "가")% 갓 성인식을 마친 음마라는 점에서도 알 수 있을 것입니다.
-		printFormW 아, 그렇다고 %kr(NAME:MASTER, "이", "가")% 유혹에 실력이 떨어진다고 생각하면 오산입니다. 엄연히 한 명의 음마니까요.
-		
-		ABL:MASTER:성교기술 += 2
-		ABL:MASTER:흡정 = 1
+		ABL:MASTER:전투기술 += 10
+		ABL:MASTER:경영 += 10
+		ABL:MASTER:인내 += 10
+		MONEY += 500
+	ELSE
+		CLEARLINE LINECOUNT - FIRST_LINE
+		GOTO inputHistory
+	ENDIF
 
-		for partIdx, 101, 200
-			if strlens(BASENAME:partIdx)
-				ABL:MASTER:partIdx++
-			endif
-		next
-		
-		EXP:MASTER:정액경험 = 10
-		ABL:MASTER:정액중독 = 1
-		
-		CFLAG:MASTER:신앙심 = -100
-		MARK:MASTER:음문각인 = 1
-	elseif RESULT == 4
-		CFLAG:MASTER:태생 = 4
-		PRINTW [TS 전생한 남자]로 게임을 시작합니다.
-		PRINTW
-		PRINTW 말해 뭐합니까. 원래 남자였는데 여자로 전생한 남고생입니다. 복잡한 설정은 잠시 치워둡시다.
-		PRINTW 감도도, 중독도 모두 납득 가능한 설정이라고 생각하지 않나요? 호불호가 갈릴만한 부분은 가슴 크기겠지만, 큰 가슴이 싫으면 직접 코드를 수정하시면 됩니다.
-		printFormW 아무튼 미궁도시에 떨어진 TS 전생 남고생이라는 설정입니다. %NAME:MASTER% 본인도 즐기는 것 같으니 잘 됐죠 뭐.
-		printFormW 노파심에 하는 말입니다만 %kr(NAME:MASTER, "이라는", "라는")% 이름, 이거 본인의 이름이나 닉네임을 적은건 아니죠?
-
-		BASE:MASTER:가슴둘레 += 50
-		BASE:MASTER:가슴크기 += 30
-		ABL:MASTER:질감도++
-		ABL:MASTER:클리감도++
-
-		EXP:MASTER:자위경험 = 10
-		ABL:MASTER:자위중독 = 1
-	elseif RESULT == 5
-		CFLAG:MASTER:태생 = 5
-		PRINTW [성녀]로 게임을 시작합니다.
-		PRINTW
-		PRINTW 하늘에서 내려온 듯 빼어난 용모를 가진 성녀님입니다.
-		PRINTW 비단 외모뿐 아니라, 하늘이 내려준 카리스마 덕분에 구원을 찾는 이들이라면 그녀가 하는 말에 기꺼이 따를 것입니다.
-		PRINTW 그런 높으신 분이 이곳에는 왜 왔냐 하니, 이 미궁도시는 전 대륙에서 사람들이 모이는 곳이다보니 교단에서 공격적으로 세력을 눌리기 위해 무려 성녀를 파견하는 강수를 둔 것이겠지요.
-		printFormW 하지만 조심해야 할 것입니다. %kr(NAME:MASTER, "이", "가")% 하늘의 가르침을 따르는 이들에게는 유명하다지만, 미궁도시에는 아직 그 이름을 들어보지도 못한 이들이 열에 두셋은 됩니다.
-		PRINTW 카리스마와 명성을 떼어놓고 본다면, 그들에게 성녀는 그저 아름다운 한 명의 여성에 불과합니다.
-		PRINTW 과연 교단 내에서 자라나 세상 물정을 잘 모르는 성녀님이 어떤 일을 겪게 될지는 모르는 일입니다.
-
-		BASE:MASTER:가슴둘레 += 100
-		BASE:MASTER:가슴크기 += 70
-		CFLAG:MASTER:기본명성 += 5000
-		CFLAG:MASTER:신앙심 = 100
-
-		TALENT:MASTER:모유체질 = 1
-		TALENT:MASTER:피임결계 = 1
-	else
-		CALL systemError("잘못된 입력입니다")
-		clearLine 2
-		goto inputHistory
-	endif
+ELSE
+	CALL systemError("잘못된 입력입니다")
+	CLEARLINE 2
+	GOTO inputHistory
+ENDIF
 
 @customizeCharacteristics
 
