--- a/ERB/01 SYSTEM/FIRST/NEWGAME.ERB
+++ b/ERB/01 SYSTEM/FIRST/NEWGAME.ERB
@@ -56,7 +56,8 @@ ELSEIF RESULT == 1
 	LOADGAME
 	RESTART
 ELSEIF RESULT == 2
-	CALL CUSTOM_CHARA()
+	PRINTW 아직 미개발 영역입니다.
+	;CALL CUSTOM_CHARA()
 	RESTART
 ELSEIF RESULT == 3
 	CALL HELPMENU(1)
