숍메뉴 개발

--- a/ERB/OLD/EVENTS/SHOP/PROCESS/PROCESS_MENU.ERB
+++ b/ERB/OLD/EVENTS/SHOP/PROCESS/PROCESS_MENU.ERB
@@ -57,6 +57,16 @@
 		CALL configMenu
 		RESULT = 0
 
+	ELSEIF RESULT == 805
+		CALL TESTMENU01
+	ELSEIF RESULT == 806
+		CALL TESTMENU02
+	ELSEIF RESULT == 807
+		CALL TESTMENU03
+
+	ELSEIF RESULT == 808
+		CALL DEVROOMMENU
+
 	; TURN END
 	elseif RESULT == 900 && !FLAG:원정중
 		begin turnend
