--- a/ERB/01 SYSTEM/_FUNCTION.ERB
+++ b/ERB/01 SYSTEM/_FUNCTION.ERB
@@ -51,3 +51,63 @@ IF RESULT != 0 && RESULT != 1
 ENDIF
 REDRAW LOC
 RETURN RESULT
+
+
+@YEAR_DATE_SHOW()
+#DIM SEASON_INDEX
+#DIM YEAR
+#DIMS SEASON
+#DIM DAY_IN_SEASON
+#DIMS TTIME
+#DIMS ADDTEXT
+;==============================
+; 달력 정보 계산
+;==============================
+
+; 1년차 계산 (DAY 1~120 = 1년차)
+YEAR = (DAY - 1) / 120 + 1
+
+PRINTFORM {YEAR}년 
+
+; 계절 인덱스 계산 (0=봄, 1=여름, 2=가을, 3=겨울)
+SEASON_INDEX = ((DAY - 1) / 30) % 4
+
+FONTBOLD
+; 계절 이름 문자열 설정
+IF SEASON_INDEX == 0
+    SEASON = 봄
+	SETCOLOR 0XE97777
+ELSEIF SEASON_INDEX == 1
+    SEASON = 여름
+	SETCOLOR 0X2A9D8F
+ELSEIF SEASON_INDEX == 2
+    SEASON = 가을
+	SETCOLOR 0XE9C46A
+ELSE
+    SEASON = 겨울
+	SETCOLOR 0XA8DADC
+ENDIF
+
+PRINTFORM %SEASON%
+RESETCOLOR
+FONTREGULAR
+PRINTFORM 의 
+
+; 계절 내 날짜 (1~30)
+DAY_IN_SEASON = (DAY - 1) % 30 + 1
+
+PRINTFORM {DAY_IN_SEASON}일({DAY}일차)
+; 시간대 설정 (0=아침, 1=밤)
+FONTBOLD
+IF FLAG:밤낮 == 0
+    TTIME = 아침☀️
+	SETCOLOR 0XFFD166
+ELSE
+    TTIME = 밤🌙
+	SETCOLOR 0X3A506B
+ENDIF
+PRINTFORM  %TTIME%
+FONTREGULAR
+RESETCOLOR
+
+RETURN
