--- a/ERB/OLD/EVENTS/UPDATE/CHECK_UPDATE.ERB
+++ b/ERB/OLD/EVENTS/UPDATE/CHECK_UPDATE.ERB
@@ -20,6 +20,10 @@
 		PRINTW 수동으로 업데이트 처리를 진행합니다
 	endif
 
+
+	;구버전 ERARB의 업데이트(후일 참고용)
+	[SKIPSTART]
+	
 	; 업데이트는 버전에 따라 순차적으로 진행해야 됨
 	if LASTLOAD_VERSION < 7
 		if !FLAG:최면이벤트확률
@@ -170,3 +174,4 @@
 		endif
 	endif
 
+[SKIPEND]
