여관관리 조금 + 출신 추가 + 루미설명 조금

--- a/ERB/01 SYSTEM/FIRST/CUSTOMIZE.ERB
+++ b/ERB/01 SYSTEM/FIRST/CUSTOMIZE.ERB
@@ -11,13 +11,16 @@
 	PRINTL 프롤로그를 보시겠습니까?
 	CALL ASK_YN()
 	IF RESULT == 0
-		;여관 고아 스타트
+		;신임 여관장
 		IF CFLAG:MASTER:태생 == 1
+			CALL PROLOGUE_INNMASTER
+		;여관 고아 스타트
+		ELSEIF CFLAG:MASTER:태생 == 2
 			CALL PROLOGUE_INNCHILD
 		;이세계 고등학생 스타트
-		ELSEIF CFLAG:MASTER:태생 == 2
-			CALL PROLOGUE_HIGHSCHOOL
 		ELSEIF CFLAG:MASTER:태생 == 3
+			CALL PROLOGUE_HIGHSCHOOL
+		ELSEIF CFLAG:MASTER:태생 == 4
 			CALL PROLOGUE_FALLENNOBLE
 		ELSE
 			CALL PROLOGUE_NONE
@@ -117,6 +120,9 @@ FIRST_LINE = LINECOUNT
 PRINTL
 PRINTL ***** 당신은 어떤 사람인가요? *****
 PRINTL
+PRINTL [0] - 신임 여관장
+PRINTL       딱히 특별한 능력은 없다.
+PRINTL
 PRINTL [1] - 거두어진 고아(추천)
 PRINTL       전대 여관장에게 거둬 길러진 고아
 PRINTL       어릴 적 부터 여관일을 많이 하여 응대와 청결이 높다.
@@ -133,8 +139,30 @@ PRINTL
 
 
 INPUT
-;고등학생
-IF RESULT == 1
+;일반스타트
+IF RESULT == 0
+	PRINTL [신임 여관장]으로 시작하겠습니까?
+	PRINTL 
+	PRINTL 특징 : 없음
+	PRINTL 
+
+	CALL ASK_YN
+	IF RESULT == 0
+		PRINTW [신임 여관장]으로 시작합니다.
+		CFLAG:MASTER:태생 = 1
+		;마을사람 호감도 증가는 미구현
+	ELSE
+		CLEARLINE LINECOUNT - FIRST_LINE
+		GOTO inputHistory
+	ENDIF
+
+;고아
+ELSEIF RESULT == 1
+
+	PRINTW 아직 개발중입니다.
+	CLEARLINE LINECOUNT - FIRST_LINE
+	GOTO inputHistory
+
 	PRINTL [거두어진 고아]로 시작하겠습니까?
 	PRINTL 
 	PRINTL 특징 : 응대 + 10, 청결 + 5, 조리 + 10, 마을사람의 호감도 증가
@@ -143,7 +171,7 @@ IF RESULT == 1
 	CALL ASK_YN
 	IF RESULT == 0
 		PRINTW [거두어진 고아]로 시작합니다.
-		CFLAG:MASTER:태생 = 1
+		CFLAG:MASTER:태생 = 2
 		ABL:MASTER:조리 += 10
 		ABL:MASTER:청결 += 5
 		ABL:MASTER:응대 += 10
@@ -154,8 +182,13 @@ IF RESULT == 1
 	ENDIF
 
 
-;고아
+;고등학생
 ELSEIF RESULT == 2
+
+	PRINTW 아직 개발중입니다.
+	CLEARLINE LINECOUNT - FIRST_LINE
+	GOTO inputHistory
+
 	PRINTL [이세계에서 온 고등학생]으로 시작하겠습니까?
 	PRINTL 
 	PRINTL 특징 : 지능 + 10, 관찰 + 10, <스마트폰> 소지(아직 미구현)
@@ -164,7 +197,7 @@ ELSEIF RESULT == 2
 	CALL ASK_YN
 	IF RESULT == 0
 		PRINTW [이세계에서 온 고등학생]으로 시작합니다.
-		CFLAG:MASTER:태생 = 2
+		CFLAG:MASTER:태생 = 3
 		ABL:MASTER:지능 += 10
 		ABL:MASTER:관찰 += 10
 		;스마트폰은 나중에 추가
@@ -174,6 +207,11 @@ ELSEIF RESULT == 2
 	ENDIF
 
 ELSEIF RESULT == 3
+
+	PRINTW 아직 개발중입니다.
+	CLEARLINE LINECOUNT - FIRST_LINE
+	GOTO inputHistory
+
 	PRINTL [몰락한 귀족 가문의 후계자]로 시작하겠습니까?
 	PRINTL 
 	PRINTL 특징 : 경영 + 10, 인내 + 10, 시작 골드 + 500G
@@ -182,7 +220,7 @@ ELSEIF RESULT == 3
 	CALL ASK_YN
 	IF RESULT == 0
 		PRINTW [몰락한 귀족 가문의 후계자]로 시작합니다.
-		CFLAG:MASTER:태생 = 3
+		CFLAG:MASTER:태생 = 4
 		ABL:MASTER:전투기술 += 10
 		ABL:MASTER:경영 += 10
 		ABL:MASTER:인내 += 10
