--- a/ERB/02 SHOP/PROCESS_MENU.ERB
+++ b/ERB/02 SHOP/PROCESS_MENU.ERB
@@ -83,7 +83,8 @@
 	ELSEIF RESULT == 803
 		CALL configMenu
 		RESULT = 0
-
+	ELSEIF RESULT == 804
+		CALL LUMI_HELP_MENU
 	ELSEIF RESULT == 805
 		CALL TESTMENU01
 	ELSEIF RESULT == 806
