--- a/ERB/02 SHOP/SHOW_SHOP.ERB
+++ b/ERB/02 SHOP/SHOW_SHOP.ERB
@@ -32,10 +32,10 @@
 
 	PRINTL =====[ 여관 관리 장부 ]=====================================================================================================
 	PRINTL
-	PRINTL  < 숙박현황 > : 빈 방 2 / 사용중 3
-	PRINTL  <  청결도  > : 높음                 <   식사   > : 충분
-	PRINTL  <  유지비  > : 100G / 일
-	PRINT  < 마을상황 > : 평온함               
+	PRINTL  < 숙박현황 > : 빈 방 2 / 장기숙박 3 / 청소필요 1
+	PRINTL  <  청결도  > : 높음                                <   식사   > : 충분
+	PRINTFORML  <  유지비  > : %TOSTR(MONEY,"#,###")%G / 일
+	PRINT  < 마을상황 > : 평온함                              
 	PRINTL <   소문   > : "도시에서 새로운 모험가들이 찾아오나봐"
 	PRINTL
 	PRINTL =====[  캐릭터 상황   ]=====================================================================================================
